2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileXML/*.[hm]: Made method names, class declarations and spacing 
	between these constructs consistent and compliant with Etoile coding 
	guidelines. Various method names or parameters will have to be reworked 
	though.

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileXML/ETXMLParserDelegate.h: Modified ETXMLParserDelegate protocol to 
	inherit from NSObject protocol.
	* EtoileXML/ETXMLNullHandler.h:
	* EtoileXML/ETXMLNullHandler.m:
	* EtoileXML/ETXMLParser.h:
	* EtoileXML/ETXMLParser.m:
	Removed NSObject protocol in the type of the parameters that must conform to
	ETXMLParserDelegate.

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* COPYING: Updated copyright holders and replaced outdated 
	EtoileExtensionsKit mentions by EtoileFoundation.

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/EtoileFoundation.h: Included EtoileXML headers.

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileXML/*.[hm]: Made all license notices consistent and pretty :-)

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileXML/*.h: Modified all import statements to be consistent and allows 
	these headers to be imported by other modules when compiling against the 
	framework.

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileXML: Added by copying ETXML from Services/Jabber.
	* EtoileXML/GNUmakefile: Modified to compile as a framework, reference
	library symbols explicitly and integrate well in the build process. Also 
	cleaned a bit.
	* EtoileXML/Macros.h: Copied from Services/Jabber/ to make EtoileXML 
	compiles. Should probably be cleaned or removed at later point.
	* GNUmakefile: Updated to handle EtoileXML as a subframework.
	* EtoileThread/GNUmakefile: Modified to reference library symbols 
	explicitly.

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/ETUUID.h:
	* Source/ETUUID.m:
	Added by copying COUUID.h and COUUID.m from CoreObject.