@@ -1,5 +1,9 @@
 2008-04-05  Quentin Mathe <qmathe@club-internet.fr>
 
+	* EtoileThread/*.[hm]: Made all license notices consistent and pretty :-)
+
+2008-04-05  Quentin Mathe <qmathe@club-internet.fr>
+
 	* EtoileXML/*.[hm]: Made method names, class declarations and spacing 
 	between these constructs consistent and compliant with Etoile coding 
 	guidelines. Various method names or parameters will have to be reworked 
